examples/failing/UnderscoreModuleName.purs
module Bad_Module where

main = Debug.Trace.trace "Done"
